﻿+++ version 0.12.0-beta1
* tabs: 'close all tabs but active one' action added (Juzef)
* last_seen: #1430 done: added context menu in Last Seen window (Vogel)
* configuration: #2529 fixed: prevent loss of XML nodes with same tags in one parent node (ultr)
* tabs: #2098, #2497 fixed: respect blocking window closing settings (Vogel)

+++ version 0.12.0-alpha4
* sql_history: #2484 done: removed uuids from history file, now history can be moved between instances (Vogel)
* buddies: #2489 done: removed BuddiesModel and BuddiesModelBase classes (Vogel)
* chat styles: #2499 fixed: keep message borders for long content (ultr)
* jabber: #2141 done: MUC support added (Vogel)
* sms: #359 done: more detailed process of sending SMS with possibility of cancelation in any moment (Vogel)
* sms: #2466 fixed: messages from JavaScript are now translatable (Vogel)
* history: #2526 fixed: display history for unknown chats and unknown contacts (Vogel)
* history: #1586 fixed: history was not available for removed accounts (Vogel)

+++ version 0.12.0-alpha3
* core: configuration file renamed to kadu-0.12.conf.xml as format will be changed (Vogel)
* encryption_ng: #2505 done: removed "Encrypt by default" option, it is now always set to true (Vogel)
* gui: #2122 fixed: do not move contact to the end of list when changing its account in Buddy Data Window (Vogel)
* gui: #370 fixed: do not display emoticons in middle of word (Vogel)
* gui: #598 fixed: added icons preview to Configuration Window (Vogel)
* configuration: #2496 done: support custom icons for plugins in configuration sections (beevvy)
* gui: new and improved plugins configuration window (Juzef)

+++ version 0.12.0-alpha2
* gui: #2153 done: new and improved window for changing account status and description (Juzef)
* history: #2440 done: auto-recovery for corrupted history databases (Vogel)
* history: #2365 done: history can be disabled per chat and per buddy (Vogel)

+++ version 0.12.0-alpha1